--- a/Auth_Agent/sdk/package.json
+++ b/Auth_Agent/sdk/package.json
@@ -1,30 +1,30 @@
 {
   "name": "auth-agent-sdk",
-  "version": "1.0.0",
+  "version": "2.5.0",
   "description": "Official SDK for Auth Agent - OAuth 2.1 for websites and AI agents",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./client": {
+      "types": "./dist/client.d.ts",
       "import": "./dist/client.mjs",
-      "require": "./dist/client.js",
-      "types": "./dist/client.d.ts"
+      "require": "./dist/client.js"
     },
     "./client/react": {
-      "import": "./dist/client-react.mjs",
-      "require": "./dist/client-react.js",
-      "types": "./dist/client-react.d.ts"
+      "types": "./dist/client/react.d.ts",
+      "import": "./dist/client/react.mjs",
+      "require": "./dist/client/react.js"
     },
     "./agent": {
+      "types": "./dist/agent.d.ts",
       "import": "./dist/agent.mjs",
-      "require": "./dist/agent.js",
-      "types": "./dist/agent.d.ts"
+      "require": "./dist/agent.js"
     }
   },
   "files": [
@@ -35,7 +35,9 @@
   "scripts": {
     "build": "tsup",
     "prepublishOnly": "npm run build",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "auth",
@@ -67,10 +69,13 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "jsdom": "^23.2.0",
     "react": "^18.2.0",
     "tsup": "^8.0.0",
-    "typescript": "^5.3.0"
-  },
-  "dependencies": {}
+    "typescript": "^5.3.0",
+    "vitest": "^1.0.0"
+  }
 }
